--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: index.html
     - text: "About Me"
       href: about.html
+    - text: "Projects"
+      href: Projects.html
     - text: "Achievement"
       href: Achievement.html
 output:
